--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,28 @@
+.mySwiperSlug.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.mySwiperSlug  .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mySwiperSlug .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+
 .phone-widget-des {
   position: fixed;
   bottom: 80px;
@@ -6,7 +31,9 @@
   z-index: 999;
   height: 100px;
 }
-
+#open-modal-vouchers {
+  color:white !important;
+}
 .booking-widget-des {
   position: fixed;
   bottom: 230px;
